--- a/ttplayer/index.html
+++ b/ttplayer/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+.<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -42,19 +42,11 @@
 						<li>情人节卡片 手写的永远</li>
 					</ul>
 					<div class="player">
-						<audio id="player" preload="auto" controls="controls">不支持HTML5</audio>
+						<audio id="player" src="music/shou_xie_de_cong_qian.mp3" preload="auto" controls="controls">不支持HTML5</audio>
 					</div>
 				</div>
 			</div>
 		</div>
 	<script type="text/javascript" src="js/player.js" ></script>
-	<img id="outside">
-	<div id="my-id">
-	    <img id="inside">
-	    <div class="lonely">1</div>
-	    <div class="outer">
-	        <div class="inner">2</div>
-	    </div>
-	</div>
 	</body>
 </html>
