update music and js

--- a/ttplayer/index.html
+++ b/ttplayer/index.html
@@ -14,13 +14,7 @@
 			<div class="main">
 				<div class="list">
 					<ul id="songsList" class="list-item">
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
-						<li><a href="javascript:void(0)">手写的从前-周杰伦</a></li>
+						
 					</ul>
 				</div>
 				<div class="lrc">
@@ -42,7 +36,7 @@
 						<li>情人节卡片 手写的永远</li>
 					</ul>
 					<div class="player">
-						<audio id="player" src="music/shou_xie_de_cong_qian.mp3" preload="auto" controls="controls">不支持HTML5</audio>
+						<audio id="player" src="music/shou_xie_de_cong_qian.mp3" controls="controls">不支持HTML5</audio>
 					</div>
 				</div>
 			</div>
